--- a/gb/21/9/20/n13247163.md
+++ b/gb/21/9/20/n13247163.md
@@ -1,26 +1,29 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/uimzxm315/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/uimzxm315/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/uimzxm315/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/uimzxm315/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/uimzxm315/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/uimzxm315/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/uimzxm315/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/uimzxm315/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/uimzxm315/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/uimzxm315/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/uimzxm315/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/uimzxm315/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/uimzxm315/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/uimzxm315/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/uimzxm315/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/uimzxm315/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/uimzxm315/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/uimzxm315/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/uimzxm315/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/uimzxm315/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/uimzxm315/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/uimzxm315/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/uimzxm315/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/uimzxm315/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/uimzxm315/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/uimzxm315/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/uimzxm315/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/uimzxm315/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/uimzxm315/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/uimzxm315/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/uimzxm315/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/uimzxm315/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/uimzxm315/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/uimzxm315/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/uimzxm315/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/uimzxm315/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/uimzxm315/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/uimzxm315/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/uimzxm315/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/uimzxm315/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/uimzxm315/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/uimzxm315/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/uimzxm315/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/uimzxm315/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/uimzxm315/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/uimzxm315/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/uimzxm315/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/yirpaj3429/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/yirpaj3429/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/yirpaj3429/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/yirpaj3429/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/yirpaj3429/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/yirpaj3429/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/yirpaj3429/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/yirpaj3429/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/yirpaj3429/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/yirpaj3429/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/yirpaj3429/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/yirpaj3429/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/yirpaj3429/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/yirpaj3429/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/yirpaj3429/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/yirpaj3429/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/yirpaj3429/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/yirpaj3429/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/yirpaj3429/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/yirpaj3429/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/yirpaj3429/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/yirpaj3429/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/yirpaj3429/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>报告：美中科技双边投资减96% 带动各国脱钩</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2021/09/id13247216-GettyImages-57496466-600x400.jpg" />
-<h6>根据最新报告，美中之间的科技双边投资已下降了96％。这个趋势正带动各国加强技术和供应链的独立性。图为台湾台南科学园区中的12英寸联电晶圆厂。(SAM YEH/AFP via Getty Images)
+<h6>根据最新报告，美中之间的科技双边投资已下降了96%。这个趋势正带动各国加强技术和供应链的独立性。图为台湾台南科学园区中的12英寸联电晶圆厂。(SAM YEH/AFP via Getty Images)
 </h6>
 <hr>
-	<p>【大纪元2021年09月20日讯】（大纪元记者陈霆综合报导）近年来，<ahref="https://github.com/uimzxm315/djy/blob/master/gb/tag/%E7%BE%8E%E4%B8%AD%E5%85%B3%E7%B3%BB.md#1">美中关系</a>日益紧张，美国不断努力减少在<ahref="https://github.com/uimzxm315/djy/blob/master/gb/tag/%E4%BE%9B%E5%BA%94%E9%93%BE.md#1">供应链</a>上对中国的依赖。最新报告显示，在此情势之下，美中之间的<ahref="https://github.com/uimzxm315/djy/blob/master/gb/tag/%E7%A7%91%E6%8A%80%E6%8A%95%E8%B5%84.md#1">科技投资</a>已大幅下降了96%，这个趋势也带动各国加速投资，希望保证科技与供应链的独立性。</p>
+	<p>【大纪元2021年09月20日讯】（大纪元记者陈霆综合报导）近年来，<ahref="https://github.com/yirpaj3429/djy/blob/master/gb/tag/%E7%BE%8E%E4%B8%AD%E5%85%B3%E7%B3%BB.md#1">美中关系</a>日益紧张，美国不断努力减少在<ahref="https://github.com/yirpaj3429/djy/blob/master/gb/tag/%E4%BE%9B%E5%BA%94%E9%93%BE.md#1">供应链</a>上对中国的依赖。最新报告显示，在此情势之下，美中之间的<ahref="https://github.com/yirpaj3429/djy/blob/master/gb/tag/%E7%A7%91%E6%8A%80%E6%8A%95%E8%B5%84.md#1">科技投资</a>已大幅下降了96%，这个趋势也带动各国加速投资，希望保证科技与供应链的独立性。</p>
 <p>贝恩公司周一（9月20日）发布的最新年度报告<ahref="https://www.bain.com/insights/us-china-decoupling-tech-report-2021/" target="_blank" rel="noopener noreferrer">链接</a>）显示，在2016年至2020年期间，美中两国之间的总体直接投资从620亿美元下降到160亿美元，其中科技部分的投资在这期间暴跌了96%。</p>
 <p>贝恩公司在给《大纪元时报》的声明中表示，这个趋势“给全球科技公司带来了不确定性，要求科技高管不断适应”。</p>
+<p><strong>听新闻：</strong></p>
+<div style="width: 100%; height: 170px; margin-bottom: 20px; border-radius: 10px; overflow:hidden;"><a style="width: 100%; height: 170px;" frameborder="no" scrolling="no" seamless src="https://player.captivate.fm/episode/1addc2ad-e416-475f-b649-9dcb22f35d68"></a></div>
+<p><strong>（听更多请至<ahref="https://github.com/yirpaj3429/djy/blob/master/gb/podcast.md#1">“听纪元”</a>平台）</strong></p>
 <p>据贝恩公司的美中投资中心数据，技术、房地产和医疗保健相关领域是双边投资下降幅度最大的领域。</p>
-<p>该公司认为，随着<ahref="https://github.com/uimzxm315/djy/blob/master/gb/tag/%E7%BE%8E%E4%B8%AD%E8%84%B1%E9%92%A9.md#1">美中脱钩</a>、全球芯片短缺，其它主要国家为了保障经济与国家安全，正纷纷加大投资，加强技术和<ahref="https://github.com/uimzxm315/djy/blob/master/gb/tag/%E4%BE%9B%E5%BA%94%E9%93%BE.md#1">供应链</a>的独立性。</p>
+<p>该公司认为，随着<ahref="https://github.com/yirpaj3429/djy/blob/master/gb/tag/%E7%BE%8E%E4%B8%AD%E8%84%B1%E9%92%A9.md#1">美中脱钩</a>、全球芯片短缺，其它主要国家为了保障经济与国家安全，正纷纷加大投资，加强技术和<ahref="https://github.com/yirpaj3429/djy/blob/master/gb/tag/%E4%BE%9B%E5%BA%94%E9%93%BE.md#1">供应链</a>的独立性。</p>
 <p>贝恩公司认为，这个趋势将在未来几年里给全球科技业带来新的格局，也与数年前科技企业高管纷纷以“如何进入中国市场”为主要议题形成了明显的对比。</p>
 <figure id="attachment_12985233" aria-describedby="caption-attachment-12985233" style="width: 450px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2021/05/id12985233-GettyImages-1142488819@1200x1200.jpeg"><img class="size-medium wp-image-12985233" src="https://i.epochtimes.com/assets/uploads/2021/05/id12985233-GettyImages-1142488819@1200x1200-450x320.jpeg" alt="" width="450" b="320" /></a><figcaption id="caption-attachment-12985233" class="wp-caption-text">示意图，图为深圳东莞华为生产园区，一名工人在生产线末端给智能手机打包。(Kevin Frayer/Getty Images)</figcaption></figure>
 <p>今年6月，美国参议院以压倒性的多数批准了2,500亿美元的2021《美国创新与竞争法》（USICA），旨在帮助美国在关键领域上与中国竞争。媒体认为，该法案体现了在“深度分裂”的美国国会当中，两党在对华强硬路线上有“罕见一致的情绪”。</p>
 <p>该法案为美国国内半导体研究和制造提供520亿美元、为国家科学基金会提供约810亿美元的投资。此外，该法案还将在国家科学基金会建立一个新部门，称为技术和创新局，该部门将专注于开发新技术、培养国内人才，它将在五年内获得290亿美元的资金。</p>
-<p>与此同时，<ahref="https://github.com/uimzxm315/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1.md#1">中共</a>在2020年的年度研发支出攀升至超过3,500亿美元，未来几年中共也计划在人工智能（AI）、半导体和5G网络等技术上投入1.4万亿美元。</p>
+<p>与此同时，<ahref="https://github.com/yirpaj3429/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1.md#1">中共</a>在2020年的年度研发支出攀升至超过3,500亿美元，未来几年中共也计划在人工智能（AI）、半导体和5G网络等技术上投入1.4万亿美元。</p>
 <p>贝恩公司在报告中说：“两国最近的举动表明，脱钩将成为未来几年技术格局的一个决定性特征。”</p>
 <p>报告指出，韩国5月宣布投资4,500亿美元，希望到2030年将自己打造成全球最大的芯片制造基地。欧盟3月承诺在“数字主权”（digital sovereignty）方面投资1,500亿美元，目标是在2030年前，将欧盟半导体生产份额提高到全球总额的20%。</p>
 <p>报告说，未来有着“巨大的”不确定性，呼吁企业领导人必须了解地缘政治风险，谨慎计划，并投入更多资源来促进政府关系和全球贸易团队。</p>
 <p>同时，由于世界各地对“脱钩”的投资规模和速度都是前所未见的，这让科技公司必须不断更新其短期和长期战略。</p>
-<p>“美国正在努力促成一个联盟，以形塑一个反对中国<ahref="https://github.com/uimzxm315/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1.md#1">中共</a>）的统一战线”，报告中说，“如果成功，这可能使限制或阻止向中国出售关键技术变得更加容易。”</p>
+<p>“美国正在努力促成一个联盟，以形塑一个反对中国<ahref="https://github.com/yirpaj3429/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1.md#1">中共</a>）的统一战线”，报告中说，“如果成功，这可能使限制或阻止向中国出售关键技术变得更加容易。”</p>
 <p>报告指出，目前欧盟是否愿意加入这个联盟尚不清楚。欧盟将尝试自立还是加入以美国为首的抗中共联盟，未来尚需进一步观察。</p>
 <p>在此情况之下，台湾的未来方向及其与中共的关系，也成为全世界科技公司的焦点，外界格外关心台湾是否能持续成为全球顶级的半导体供应商。</p>
 <p>责任编辑：叶紫微#</p>
@@ -29,41 +32,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/cdbkmw3667/djy/blob/master/gb/21/9/9/n13221130.md#1">劳动节长周末11名温哥华警官遇袭受伤</a></li>
-<li><a href="https://github.com/cdbkmw3667/djy/blob/master/gb/21/9/9/n13220674.md#1">周末市中心拍电视剧  Burrard桥将锁路</a></li>
-<li><a href="https://github.com/cdbkmw3667/djy/blob/master/gb/21/9/9/n13220614.md#1">快餐厅美食广场就餐无需出示疫苗卡</a></li>
-<li><a href="https://github.com/cdbkmw3667/djy/blob/master/gb/21/9/9/n13220595.md#1">9月8日：新增814宗确诊</a></li>
+<li><a href="https://github.com/yirpaj3429/djy/blob/master/gb/21/8/28/n13193856.md#1">分析：Delta重创全球供应链 加速美中经济脱钩</a></li>
+<li><a href="https://github.com/yirpaj3429/djy/blob/master/gb/21/8/31/n13200228.md#1">重塑全球供应链？学者：需与新疆供应链脱钩</a></li>
+<li><a href="https://github.com/yirpaj3429/djy/blob/master/gb/21/9/9/n13222480.md#1">【财商天下】韩日德转向 全球与中共脱钩</a></li>
+<li><a href="https://github.com/yirpaj3429/djy/blob/master/gb/21/9/10/n13223477.md#1">中美脱钩 汇丰退出美国 纽约客户排队取财物</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank">不一样的海外校园</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/14/n10217201.md#1" target="_blank">极限饥饿：灵与肉的双重凌迟（上）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/30/n11013193.md#1" target="_blank">北京人赞颂法轮功美好 谢李洪志大师洪恩</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank">海峡两岸的强烈对比</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/9/26/n10743859.md#1" target="_blank">古玉文：公私合营献产业 武百祥命陨红朝</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/28/n11285941.md#1" target="_blank">美议员颁发国会特别褒奖 感谢法轮大法</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/zdhfsi3794/djy/blob/master/gb/21/9/16/n13238162.md#1">美国男子自称遭外星人多次绑架和植入晶片</a></li>
-<li><a href="https://github.com/zdhfsi3794/djy/blob/master/gb/21/9/10/n13225261.md#1">【未解之谜】轰动日本 甲府UFO事件</a></li>
-<li><a href="https://github.com/zdhfsi3794/djy/blob/master/gb/21/9/15/n13237143.md#1">【百年真相】最惨海归博士 萧光琰文革遭灭门</a></li>
-<li><a href="https://github.com/zdhfsi3794/djy/blob/master/gb/21/9/6/n13213473.md#1">古今两个中秋礼俗各异 古代不送月饼 月饼何时普及？</a></li>
-<li><a href="https://github.com/zdhfsi3794/djy/blob/master/gb/21/9/14/n13233994.md#1">【未解之谜】前世情未了 今生续前缘</a></li>
-<li><a href="https://github.com/zdhfsi3794/djy/blob/master/gb/21/9/18/n13243637.md#1">【十字路口】北京内乱加速 美英澳联盟四大趋势</a></li>
-<li><a href="https://github.com/zdhfsi3794/djy/blob/master/gb/21/9/17/n13242431.md#1">【新闻看点】福建疫情仍高烧 中共欲打港富豪？</a></li>
-<li><a href="https://github.com/zdhfsi3794/djy/blob/master/gb/21/9/18/n13244249.md#1">【横河观点】世界为何对中共移植黑幕沉默？</a></li>
-<li><a href="https://github.com/zdhfsi3794/djy/blob/master/gb/21/9/18/n13242870.md#1">消息：李嘉诚再次出售大陆地产项目</a></li>
-<li><a href="https://github.com/zdhfsi3794/djy/blob/master/gb/21/9/17/n13240636.md#1">中共何以令一位精英人士流亡美国（1）</a></li>
-<li><a href="https://github.com/zdhfsi3794/djy/blob/master/gb/21/9/18/n13242696.md#1">研究：降低蛋白质出错有助延长寿命</a></li>
-<li><a href="https://github.com/zdhfsi3794/djy/blob/master/gb/21/9/17/n13242350.md#1">范冰冰40岁生日 罕见晒与家人合照</a></li>
-<li><a href="https://github.com/zdhfsi3794/djy/blob/master/gb/21/9/17/n13242592.md#1">杨紫琼晒《尚气》花絮照 大赞梁朝伟和元华</a></li>
-<li><a href="https://github.com/zdhfsi3794/djy/blob/master/gb/21/9/19/n13245464.md#1">李嘉欣富豪丈夫似一夜变老 被拍拄拐杖蹒跚求医</a></li>
-<li><a href="https://github.com/zdhfsi3794/djy/blob/master/gb/21/9/19/n13244546.md#1">朱俐静用餐遭酱汁淋头 对店员态度感到失望</a></li>
-<li><a href="https://github.com/zdhfsi3794/djy/blob/master/gb/21/9/17/n13241349.md#1">需自主管理却聚餐引争议 王力宏与徐若瑄致歉</a></li>
-<li><a href="https://github.com/zdhfsi3794/djy/blob/master/gb/21/9/17/n13242154.md#1">维生素D有4大抗癌功效 补D防癌注意1关键</a></li>
-<li><a href="https://github.com/zdhfsi3794/djy/blob/master/gb/21/9/17/n13242435.md#1">以色列：打疫苗突破感染风险 是自然感染13倍</a></li>
-<li><a href="https://github.com/zdhfsi3794/djy/blob/master/gb/21/9/19/n13244539.md#1">巨型石斑鱼一口咬下鲨鱼 美国船长看傻眼</a></li>
-<li><a href="https://github.com/zdhfsi3794/djy/blob/master/gb/21/9/17/n13241196.md#1">卡车断成两半车头继续向前冲 司机在后面追</a></li>
-<li><a href="https://github.com/zdhfsi3794/djy/blob/master/gb/21/9/13/n13229960.md#1">4种柚子营养、热量谁较高？营养师1招控份量</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614863.md#1">《梁祝》小提琴协奏曲</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13616638.md#1">【十字路口】蓬佩奥到访台湾意义重大？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615200.md#1">吴明德：中共暗撑俄侵乌 恐成国际大输家</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607661.md#1">【更新2.27】乌总统：接下来24小时至关重要</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610320.md#1">乌克兰用无人机摧毁俄导弹系统 视频曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609576.md#1">俄银行被切断SWIFT系统 中共角色更尴尬</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614888.md#1">赴韩拍戏皮肤长满红斑 范冰冰素颜照吓坏网友</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13608014.md#1">多吃橙色食物 不只护眼 还有这些强大好处</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613932.md#1">【健康1+1】染Omicron出现脑雾 一方法2周解除</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/uimzxm315/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/uimzxm315/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/9/20/n13247163.htm">报告：美中科技双边投资减96% 带动各国脱钩</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/yirpaj3429/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/yirpaj3429/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/9/20/n13247163.htm">报告：美中科技双边投资减96% 带动各国脱钩</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/uimzxm315/djy/blob/master/gb/21/9/20/n13247163.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/uimzxm315/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uimzxm315/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/uimzxm315/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/uimzxm315/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/uimzxm315/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uimzxm315/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/uimzxm315/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uimzxm315/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/uimzxm315/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uimzxm315/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/uimzxm315/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uimzxm315/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/uimzxm315/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uimzxm315/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/uimzxm315/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uimzxm315/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/uimzxm315/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uimzxm315/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/uimzxm315/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uimzxm315/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/uimzxm315/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uimzxm315/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/uimzxm315/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uimzxm315/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/uimzxm315/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uimzxm315/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/uimzxm315/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uimzxm315/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/uimzxm315/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uimzxm315/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/uimzxm315/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uimzxm315/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/uimzxm315/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uimzxm315/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/uimzxm315/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uimzxm315/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/uimzxm315/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uimzxm315/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/uimzxm315/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uimzxm315/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/uimzxm315/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uimzxm315/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/uimzxm315/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uimzxm315/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/uimzxm315/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uimzxm315/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/uimzxm315/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uimzxm315/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/yirpaj3429/djy/blob/master/gb/21/9/20/n13247163.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/yirpaj3429/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/yirpaj3429/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/yirpaj3429/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
